--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=spending-worker
 spring.datasource.url=${DB_URL}
 spring.datasource.username=${DB_USER}
 spring.datasource.password=${DB_PASSWORD}
+spring.cloud.kubernetes.config.enabled=true
 spring.cloud.kubernetes.reload.enabled=true
 spring.cloud.gcp.credentials.location=file:${app.gcp.keyPath}
 spring.cloud.gcp.project-id=${app.gcp.projectId}
