--- a/skaffold.yaml
+++ b/skaffold.yaml
@@ -2,7 +2,7 @@ apiVersion: skaffold/v2beta11
 kind: Config
 deploy:
   kubectl:
-    manifests: ["k8s/*.yaml", "k8s/dev/*.yaml", "k8s/dev/secrets/*.yaml"]
+    manifests: ["k8s/*.yaml"]
 build:
   artifacts:
     - image: peterulb/spending-worker
